- adjust bound before checking feasibility in SCIPvarAddVlb() and SCIPvarAddVub() to detect integrality cutoff
- choose incumbent solution as reference in varFixingsRins() and varFixingsDins() of heur_alns.c to ensure integrality
- consider variable type in selectInitialVariableRandomly() of heur_gins.c to count integral variables

Build system
------------

### CMake

- disable setting the boolean variable MACOSX_RPATH to a string value to actually enable @rpath usage

- define SOPLEX_NEEDED and ZIMPL_NEEDED to avoid syntax error in configuration file

### Makefile

Miscellaneous
-------------

- when writing a problem with non-generic names, warnings are printed if variable or constraint names are not unique

@section RN922 SCIP 9.2.2
*************************

Fixed bugs
----------

- fixed definition of slack variables of >= constraints and ranged rows in LP interface to Gurobi
- free memory leaking singleton arrays for ignored variables in SCIPapplyHeurDualval()
- use epsilon tolerance for bound implications of dual substitutions in dualPresolve() of cons_linear
- fixed timeouts due to race conditions when using TPI=omp
- fixed issues with indexing of concurrent solvers when a solver finishes (because SCIP is too fast) before others have been created when using TPI=tny
- respect fixing if variable is declared binary in bounds section of mps file
- fixed reading mps files with short row and column names and some fixed-form mps files with spaces in row names
- force local bounds to adjusted value when fixing variable
- adds missing NULL check for Benders' subproblems in feasalt cut
- apply objective scale to pseudoboolean non-linear terms
- impose pseudoboolean cost bound without intermediate casting
- flatten aggregation graph before finishing presolve to accelerate evaluating an empty solution
- respect fixed resultants in binvarGetActiveProbindex() of branch_relpscost
- drop fixed resultants when copying pseudoboolean constraint